--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <div class="grid wide">
         <nav class="navbar edit-navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
@@ -49,25 +52,25 @@
       <div class="grid wide">
         <h1 class="content-title">Dashboard</h1>
         <div class="row">
-          <div class="col l-3 m-6">
+          <div class="col l-3 m-6 c-12">
             <div class="content-tab">
               <p class="tab-number">4</p>
               <p class="tab-text">Categories</p>
             </div>
           </div>
-          <div class="col l-3 m-6">
+          <div class="col l-3 m-6 c-12">
             <div class="content-tab">
               <p class="tab-number">6</p>
               <p class="tab-text">Foods</p>
             </div>
           </div>
-          <div class="col l-3 m-6">
+          <div class="col l-3 m-6 c-12">
             <div class="content-tab">
               <p class="tab-number">3</p>
               <p class="tab-text">Total Orders</p>
             </div>
           </div>
-          <div class="col l-3 m-6">
+          <div class="col l-3 m-6 c-12">
             <div class="content-tab">
               <p class="tab-number">$36.00</p>
               <p class="tab-text">Revenue Generated</p>
